# ot-harjoitustyo

./: README.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/: kassapaate.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
open_gdsn/: README.md  pyproject.toml  tasks.py
open_gdsn/documentation/: changelog.md  requirements_specification.md  work_hours.md
open_gdsn/src/: main.py
open_gdsn/src/entities/: company.py
open_gdsn/src/repositories/: company_repository.py
open_gdsn/src/services/: company_service.py
open_gdsn/src/tests/repositories/: company_repository_test.py
